@@ -1,7 +1,7 @@
 #!/bin/sh
 # WARNING: This file was auto-generated. Do not edit!
 #
-# $Id: svctool.in,v 2.574 2021-07-17 00:02:06+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.575 2021-07-17 00:13:24+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -28,7 +28,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.574 2021-07-17 00:02:06+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.575 2021-07-17 00:13:24+05:30 Cprogrammer Exp mbhangui $"
 
 if [ -d /run/mysqld ] ; then
 	mysqlSocket=/run/mysqld/mysqld.sock
@@ -2664,7 +2664,7 @@ echo "    exit 1"
 echo "fi"
 echo
 echo "exec 2>&1"
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "exec $QmailBinPrefix/bin/softlimit -m \\\$SOFT_MEM -o 1024 \\"
 if [ " $rbl" = " " ] ; then
 	echo "$QmailBinPrefix/bin/tcpserver -v -H -R -l \$HOSTNAME \\"
@@ -3151,7 +3151,7 @@ echo "    exit 1"
 echo "fi"
 echo
 echo "exec 2>&1"
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "exec $QmailBinPrefix/bin/softlimit -m \\\$SOFT_MEM -o 1024 \\"
 echo "$QmailBinPrefix/bin/tcpserver -v -H -R -l \$HOSTNAME \\"
 case $type in
@@ -3250,7 +3250,7 @@ fi
 (
 dump_run_header
 echo "exec 2>&1"
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "exec $QmailBinPrefix/bin/setuidgid indimail \\"
 echo "$QmailBinPrefix/bin/softlimit -m \\\$SOFT_MEM -o 1024 \\"
 echo " $QmailBinPrefix/sbin/udplogger -p \\\$PORT -t \\\$TIMEOUT \\\$LOCALIP\""
@@ -3335,7 +3335,7 @@ CONTEXT_FILE=$CONTROLDIR/$CONTEXT_FILE
 (
 dump_run_header
 echo "exec 2>&1"
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "exec $QmailBinPrefix/bin/setuidgid indimail \\"
 echo "  $QmailBinPrefix/sbin/qmail-daned -w $WHITELIST -t $TIMEOUT_DAYS \\"
 echo "  -s $SAVE_INTERVAL -h $HASH_SIZE \\\$LOCALIP $CONTEXT_FILE\""
@@ -3428,7 +3428,7 @@ CONTEXT_FILE=$CONTROLDIR/$CONTEXT_FILE
 (
 dump_run_header
 echo "exec 2>&1"
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "exec $QmailBinPrefix/bin/setuidgid indimail \\"
 echo "$QmailBinPrefix/bin/softlimit -m \\\$SOFT_MEM -o 1024 \\"
 echo " $GREYPROG -w $WHITELIST -t $TIMEOUT_DAYS -g $RESEND_WIN_HR \\"
@@ -3554,7 +3554,7 @@ echo "bindir=\${prefix}/bin"
 echo "libexecdir=${libexecdir}"
 echo ""
 echo "exec 2>&1"
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "IMAPAUTHMODULES=\\\"\\\""
 echo "for f in \\\`echo \\\$IMAPMODULES\\\`"
 echo "do"
@@ -4045,7 +4045,7 @@ echo "    exit 1"
 echo "fi"
 echo ""
 echo "exec 2>&1"
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "exec $QmailBinPrefix/bin/setuidgid indimail \\"
 if [ " $indisrvr_ssl" = " 1" ] ; then
 	echo "$QmailBinPrefix/sbin/indisrvr -i \\\$LOCALIP -p \\\$PORT -b \\\$MAXDAEMONS \\"
@@ -4389,7 +4389,7 @@ echo "  chmod 775 /var/run/indimail"
 echo "fi"
 echo "exec 2>&1"
 echo ""
-echo "exec $QmailBinPrefix/bin/envdir variables \\"
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables \\"
 echo "$QmailBinPrefix/bin/setuidgid indimail $QmailBinPrefix/sbin/nssd -d notice"
 ) > "$DESTDIR"$SERVICEDIR/pwdlookup/run
 /bin/chmod +x "$DESTDIR"$SERVICEDIR/pwdlookup/run
@@ -4583,7 +4583,7 @@ echo 1 > $conf_dir/MYSQL_OPT_RECONNECT
 dump_run_header
 echo "exec 2>&1"
 echo ""
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "exec $QmailBinPrefix/bin/setuidgid indimail $QmailBinPrefix/sbin/inlookup \\"
 echo "  -i \\\$THREAD_COUNT -c \\\$CACHE_COUNT\""
 ) > "$DESTDIR"$SERVICEDIR/inlookup.$base_fifo_name/run
@@ -5878,7 +5878,7 @@ esac
 (
 dump_run_header
 echo "exec 2>&1"
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "exec $QmailBinPrefix/bin/setuidgid indimail \\"
 echo "$QmailBinPrefix/bin/softlimit -m \\\$SOFT_MEM -o 1024 \\"
 if [ $silent -eq 1 ] ; then
@@ -6008,7 +6008,7 @@ echo "    sleep 5"
 echo "    exit 1"
 echo "fi"
 echo ""
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "exec $QmailBinPrefix/bin/softlimit -m \\\$SOFT_MEM -o 1024 \\"
 echo "$QmailBinPrefix/bin/tcpserver -v -H -R -l \$HOSTNAME \\"
 echo "-x $sysconfdir/tcp/tcp.poppass.cdb -X \\"
@@ -6287,7 +6287,7 @@ echo "  defaultdelivery=\`/bin/cat \$cntrl_dir/defaultdelivery\`"
 echo "else"
 echo "  defaultdelivery=\"./Maildir/\""
 echo "fi"
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "exec $QmailBinPrefix/bin/softlimit -m \\\$SOFT_MEM -o 1024 \\"
 echo "$QmailBinPrefix/sbin/qmail-daemon \$defaultdelivery\""
 ) > "$DESTDIR"$SERVICEDIR/qmail-send."$tag"/run
@@ -6518,7 +6518,7 @@ echo "  defaultdelivery=\`/bin/cat \$cntrl_dir/defaultdelivery\`"
 echo "else"
 echo "  defaultdelivery=\"./Maildir/\""
 echo "fi"
-echo "exec $QmailBinPrefix/bin/envdir variables sh -c \""
+echo "exec $QmailBinPrefix/bin/envdir $envdir_opts variables sh -c \""
 echo "exec $QmailBinPrefix/bin/softlimit -m \\\$SOFT_MEM -o 1024 \\"
 echo "$QmailBinPrefix/sbin/slowq-start \$defaultdelivery\""
 ) > "$DESTDIR"$SERVICEDIR/slowq-send/run
@@ -6588,7 +6588,7 @@ dump_run_header
 echo "exec 2>&1"
 echo "while true"
 echo "do"
-echo "  $QmailBinPrefix/bin/envdir variables \\"
+echo "  $QmailBinPrefix/bin/envdir $envdir_opts variables \\"
 echo "    /usr/bin/mrtg etc/indimail.mrtg.cfg"
 echo "  status=\$?"
 echo "  echo \"mrtg \`pwd\`/etc/indimail.mrtg.cfg status \$status\""
@@ -8679,6 +8679,7 @@ utf8=0
 databytes=$DATABYTES
 qmailqueue="/usr/sbin/qmail-queue"
 qmailsmtpd=$QmailBinPrefix"/sbin/qmail-smtpd"
+envdir_opts="-c"
 if [ " $CONTROLDIR" = " " ] ; then
 	cntrldir=$sysconfdir/control
 else
@@ -8762,6 +8763,9 @@ while test $# -gt 0; do
 	;;
 	--qmailsmtpd=*)
 	qmailsmtpd=$optarg
+	;;
+	--envdiropts=*)
+	envdir_opts=$optarg
 	;;
 	--databytes=*)
 	databytes=$optarg
